test/classes/marybeth/test_dispatch_record.good
test_dispatch_record.chpl:9: error: inheritance is not currently supported for records
test_dispatch_record.chpl:9: note: jeans declared as a record here
